--- a/Tasks/Maslov/din/mysite/app/templates/app/first.html
+++ b/Tasks/Maslov/din/mysite/app/templates/app/first.html
@@ -78,7 +78,7 @@ li {
         <div class="menu"  >
             
             <ul>
-                <li><a  href="/login">Зарегистрироваться</a></li>
+                <li><a  href="/register">Зарегистрироваться</a></li>
                 <li><a href="/price">Товар и цена</a></li>
                 <li><a href="/contacts">Контакты</a></li>
                 <li><a href="/about">О нас</a></li>
